--- a/src/index.html
+++ b/src/index.html
@@ -3,5 +3,14 @@
     <head>
         <title>HTML</title>
     </head>
-    <body></body>
+    <body>
+        <h1>Заголовок первого уровня</h1>
+        <h2>Заголовок второго уровня</h2>
+
+        <ol>
+            <li><a href="https://www.google.com/">google</a></li>
+            <li><a href="https://yandex.ru/">yandex</a></li>
+            <li><a href="https://www.bing.com/">bing</a></li>
+        </ol>
+    </body>
 </html>
